--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,3 @@
 PORT=8000
 FRONTEND_URL=http://localhost:5173
-MONGODB_URL=mongodb://localhost:27017/lms
-JWT_SECRET=
+DB_URI=mongodb://127.0.0.1:27017/lms
